[gd_scene load_steps=3 format=3 uid="uid://ctiwswy52yuye"]

[ext_resource type="Script" path="res://Weapons/hitscan_weapon.gd" id="1_ht8fr"]
[ext_resource type="PackedScene" uid="uid://by5jplljbjsvi" path="res://Weapons/Sparks.tscn" id="2_7d78s"]

[node name="HitscanWeapon" type="Node3D"]
script = ExtResource("1_ht8fr")
sparks = ExtResource("2_7d78s")

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="RayCast3D" type="RayCast3D" parent="."]
target_position = Vector3(0, 0, -100)

[node name="ReloadTimer" type="Timer" parent="."]
one_shot = true

[node name="AimDownSightsTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="StopAimDownSightsTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="timeout" from="ReloadTimer" to="." method="finish_reload"]
[connection signal="timeout" from="AimDownSightsTimer" to="." method="finish_aim_down_sights"]
[connection signal="timeout" from="StopAimDownSightsTimer" to="." method="finish_stop_aim_down_sights"]
